# typd

./: .gitignore  Cargo.toml  PKGBUILD  README.md  meson.build
.github/workflows/: build.yml
assets/: dev.typd.metainfo.xml  typd.desktop
context/: 2026-05-01_15-00.md
data/: words.freq
docs/: phase3.txt  typd-PRD.md  typd-project-plan.html
include/: common.h  layout.h  renderer.h  suggestions.h  virtual_kbd.h
packaging/flatpak/: typd.json
protocols/: xdg-output-unstable-v1.xml  xdg-shell.xml
scratch/: check_keymap  check_keymap.c  check_xkb  check_xkb.c
skills/: context.md
src/: config.rs  context_detect.rs  layout.rs  main.c  main.rs  renderer.c  renderer.rs  suggestions.c  virtual_kbd.c  virtual_kbd.rs  vkbd_proto.rs
tests/: test_bktree.c  test_click.sh  test_trie.c
typd-builds/: typd-main-1.x86_64.rpm  typd_main_amd64.deb
