[package]
name = "typd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typd"
path = "src/main.rs"

[dependencies]
wayland-client        = "0.31"
wayland-protocols-wlr = "0.2"
wayland-protocols     = "0.31"
smithay-client-toolkit = "0.18"
cairo-rs              = { version = "0.18", features = ["use_glib"] }
xkbcommon             = { version = "0.7", features = ["wayland"] }

[dev-dependencies]