[package]
name = "typd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "typd"
path = "src/main.rs"

[dependencies]
wayland-client          = "0.31"
wayland-backend         = "0.3"
wayland-protocols-wlr   = { version = "0.3", features = ["client"] }
wayland-protocols       = { version = "0.32", features = ["client", "unstable", "staging"] }
smithay-client-toolkit  = { version = "0.18", default-features = false,
                            features = ["calloop", "calloop-wayland-source"] }
calloop                 = "0.12"
calloop-wayland-source  = "0.2"
cairo-rs                = { version = "0.18", default-features = false }
xkbcommon               = "0.7"
libc                    = "0.2"
wayland-scanner         = "0.31"

[dev-dependencies]
